--- a/src/components/WorkoutForms/WorkoutForms.module.css
+++ b/src/components/WorkoutForms/WorkoutForms.module.css
@@ -78,3 +78,12 @@
         }
     }
 }
+
+@media (max-width: 430px) {
+    .equipmentImage {
+        scale: 0.8;
+        /* or you can use transform */
+        /* transform: scale(0.8); */
+    }
+}
+
